--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CalendarAppTrial</string>
-    <string name="backward"><![CDATA[<-]]></string>
-    <string name="forward"><![CDATA[->]]></string>
+    <string name="backward"><![CDATA[<]]></string>
+    <string name="forward"><![CDATA[>]]></string>
     <string name="textview">TextView</string>
 </resources>
